--- a/3. Styling with CSS/styles.css
+++ b/3. Styling with CSS/styles.css
@@ -1,30 +1,44 @@
 .center-text {
-    /* TODO 3.1: Align the text center or right */
+    /* DONE 3.1: Align the text center or right */
+    text-align: center;
 
-    /* TODO 3.2: Change the color of the font to your favorite color */
+    /* DONE 3.2: Change the color of the font to your favorite color */
+    color: blue;
     
-    /* TODO 3.3: Make the font thicker */
+    /* DONE 3.3: Make the font thicker */
+    font-weight: bold;
     
-    /* TODO 3.4: Increase the font size*/
+    /* DONE 3.4: Increase the font size*/
+    font-size: 24px;
     
-    /* TODO 3.5: Add an underline to the text */
+    /* DONE 3.5: Add an underline to the text */
+    text-decoration: underline;
     
 }
 
 .paragraph-style {
-    /* TODO 3.6: Make the font italic */
+    /* DONE 3.6: Make the font italic */
+    font-style: italic;
     
-    /* TODO 3.7: Change the font to  */
+    /* DONE 3.7: Change the font to */
+    font-family: Arial, Helvetica, sans-serif;
     
-    /* TODO 3.8: Increase the space between lines */
+    /* DONE 3.8: Increase the space between lines */
+    line-height: 1.5;
 
 }
 
 .box {
-    /* TODO 3.9: Set the width and height of the div. Try out the different units of HTML. px, em, %, in, rem  */
-    
-    /* TODO 3.10: Change the background color fo the div. Can you find a way to make the background color 50% transparent? */
-    
-    /* TODO 3.11: Play around with the margin, padding and border. Can you find a way to set the size of specific sides? */
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 200px;
+    background-color: rgba(255, 0, 0, 0.5);
+    margin: 20px;
+    padding: 10px;
+    border: 2px solid black;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
